--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Toolbox</string>
     <string name="start">Ξεκίνα</string>
     <string name="reset">Επαναφορά</string>
     <string name="stop">Παύση</string>
@@ -11,10 +10,21 @@
     <string name="item_calculator">Αριθμομηχανή</string>
     <string name="item_notepad">Σημειοματάριο</string>
     <string name="item_rng">Τυχαίος Αριθμός</string>
-    <string name="item_timer">Χρονόμετρο</string>
+    <string name="item_timer">Χρονοδιακόπτης</string>
     <string name="title">Τίτλος</string>
     <string name="content">Περιεχόμενο…</string>
     <string name="new_note_fab">Νέα Σημείωση</string>
-    <string name="timer_name">Όνομα Χρονομέτρου</string>
+    <string name="timer_name">Όνομα Χρονοδιακόπτη</string>
     <string name="loading">Φορτώνει…</string>
+    <string name="no_notes_found">Δεν βρέθηκαν σημειώσεις.</string>
+    <string name="write_your_notes_here">Γράψε τη σημείωσή σου εδώ…</string>
+    <string name="timer_set">Ορίστηκε χρονοδιακόπτης.</string>
+    <string name="timer_canceled">Χρονοδιακόπτης καταργήθηκε.</string>
+    <string name="note_saved">Σημείωση αποθηκεύτηκε.</string>
+    <string name="stopwatch_running">Το χρονόμετρο τρέχει</string>
+    <string name="timer_running">Το χρονόμετρο τρέχει</string>
+    <string name="time">Χρόνος:</string>
+    <string name="time_left">Απομένει:</string>
+    <string name="invalid_name">Μη έγκυρο όνομα!</string>
+    <string name="invalid_name_desc">Αυτό το όνομα είναι μη έγκυρο ή όμοιο με άλλο όνομα, παρακαλώ χρησημοποιήστε ένα διαφορετικό όνομα.</string>
 </resources>
