--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="start">Start</string>
     <string name="reset">Reset</string>
     <string name="stop">Pause</string>
-    <string name="delete">Delete Note</string>
+    <string name="delete">Delete</string>
     <string name="back">Back</string>
+    <string name="cancel">Cancel</string>
     <string name="ok" translatable="false">OK</string>
 
     <!-- Fragments -->
@@ -23,8 +24,8 @@
     <string name="timer_name">Timer name…</string>
     <string name="loading">Loading…</string>
     <string name="no_notes_found">No notes found.</string>
-    <string name="set">Set</string>
     <string name="write_your_notes_here">Write your notes here…</string>
+    <string name="unnamed">Unnamed</string>
 
     <!-- Toast Strings -->
     <string name="timer_set">Timer set.</string>
@@ -34,11 +35,16 @@
     <!-- Notification Strings -->
     <string name="stopwatch_running">Stopwatch running.</string>
     <string name="timer_running">Timer running.</string>
-    <string name="time">Time: </string>
+    <string name="time">Time:</string>
     <string name="time_left">Time left: </string>
 
     <!-- Alert Dialog Strings -->
     <string name="invalid_name">Invalid name!</string>
     <string name="invalid_name_desc">Name is invalid or already used. Please choose a different name.</string>
+    <string name="time_is_up">Time\'s UP!</string>
+    <string name="timer">"Timer: "</string>
+    <string name="ended">ended.</string>
+    <string name="delete_note">Delete Note</string>
+    <string name="delete_note_desc">Are you sure you want to delete this note?</string>
 
 </resources>
