Fixed timer issues, changed page changing logic(it uses intents now), Removed TimerAlertActivity and updated strings.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -46,5 +46,7 @@
     <string name="ended">beendet.</string>
     <string name="delete_note">Notiz löschen</string>
     <string name="delete_note_desc">Möchtest du diese Notiz wirklich löschen?</string>
+    <string name="add_a_timer">einen Timer hinzufügen</string>
+    <string name="timers_running">Timer laufen</string>
 
 </resources>
