--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -34,4 +34,6 @@
     <string name="ended">все кончено</string>
     <string name="delete_note">удалить примечание</string>
     <string name="delete_note_desc">Вы уверены, что хотите удалить эту заметку?</string>
+    <string name="add_a_timer">добавить таймер</string>
+    <string name="timers_running">таймеры работают</string>
 </resources>
