--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,14 +47,38 @@
     <string name="ended">ended.</string>
     <string name="delete_note">Delete Note</string>
     <string name="delete_note_desc">Are you sure you want to delete this note?</string>
-    <string name="add_a_timer">add a timer</string>
+    <string name="add_a_timer">Add a timer</string>
     <string name="timers_running">" timer(s) are running."</string>
     <string name="share">Share</string>
     <string name="share_this_note">Share this note</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="save">save</string>
     <string name="show_milliseconds_on_stopwatch">Show milliseconds on stopwatch.</string>
     <string name="settings_udpated">Settings udpated</string>
     <string name="stop_all">Stop all</string>
+    <string name="start_stopwatch">Start Stopwatch</string>
+    <string name="not_available">This is not available right now.</string>
+    <string name="settings">Settings</string>
+    <string name="toolbox_settings">Toolbox Settings</string>
+    <string name="untitled_note">Untitled_Note</string>
+    <string name="button_background_color">Button background color:</string>
+    <string name="choose_button_background">Choose button background</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="exit_for_sure">Are you sure you want to exit without saving the note?</string>
+    <string name="about_toolbox">About Toolbox</string>
+    <string name="app_version">App version: </string>
+    <string name="developer_info">Developed by Jason Tantaros</string>
+    <string name="contact_info">Contact: iasonas.tan@gmail.com</string>
+    <string name="developer_name">" Jason Tantaros\nAll rights reserved."</string>
+    <string name="borders">Borders:</string>
+    <string name="enable_borders">Enable Borders</string>
+    <string name="round_corners">Round Corners</string>
+    <string name="choose_color">Choose color</string>
+    <string name="battery_warning" translatable="false">The app works even without permissions, but when battery or memory is stressed, the Android system may kill some services.
+    \n\nThis means timers/stopwatch may stop unexpectedly.\n\nYou can allow background activity by going to App Info then Battery and selecting Unrestricted.\n\n</string>
+    <string name="permission_helps" translatable="false">Permissions makes app better</string>
+    <string name="never_ask_again" translatable="false">Never ask again</string>
+    <string name="lets_do_it" translatable="false">Let\'s do it</string>
+    <string name="remind_me_later" translatable="false">Remind me later</string>
+    <string name="greet_will_happen_again_on" translatable="false">"Greet will happen again on "</string>
 
 </resources>
