--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,7 @@
     <string name="lets_do_it" translatable="false">Let\'s do it</string>
     <string name="remind_me_later" translatable="false">Remind me later</string>
     <string name="greet_will_happen_again_on" translatable="false">"Greet will happen again on "</string>
+    <string name="limit">Limit:</string>
+    <string name="done">Done</string>
 
 </resources>
