--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,5 +61,8 @@
     <string name="round_corners">круглые углы</string>
     <string name="choose_color">выберите цвет</string>
     <string name="limit">Limit:</string>
-    <string name="done" />
+    <string name="done" >сделанный</string>
+    <string name="open">открыть</string>
+    <string name="rng_limit">предел</string>
+    <string name="widgets">виджеты</string>
 </resources>
