Removed version checking (server isn't working). Fixed reported bugs. Added features. Organized packages. Cleaned up code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,6 @@
     <string name="open">Open</string>
     <string name="rng_limit">Rng limit:</string>
     <string name="widgets">Widgets:</string>
+    <string name="could_not_save_note">Could not save note</string>
 
 </resources>
