--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,81 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="battery_warning">
+Die App funktioniert auch ohne Berechtigungen. Wenn jedoch Akku oder Speicher stark belastet sind, kann das Android-System einige Dienste beenden.
 
-    <!-- Buttons Actions -->
+Das bedeutet, dass Timer oder die Stoppuhr unerwartet stoppen können.
+
+Sie können die Hintergrundaktivität erlauben unter App-Info → Akku → Unbeschränkt.
+    </string>
+
+    <string name="permission_helps">Berechtigungen verbessern die Funktion der App</string>
+    <string name="never_ask_again">Nicht erneut fragen</string>
+    <string name="lets_do_it">Los geht’s</string>
+    <string name="remind_me_later">Später erinnern</string>
+    <string name="greet_will_happen_again_on">Die Begrüßung wird erneut angezeigt am </string>
+
     <string name="start">Start</string>
     <string name="reset">Zurücksetzen</string>
-    <string name="stop">Stoppen</string>
     <string name="pause">Pause</string>
+    <string name="stop">Stopp</string>
     <string name="delete">Löschen</string>
     <string name="back">Zurück</string>
     <string name="cancel">Abbrechen</string>
+    <string name="stop_all">Alle stoppen</string>
+    <string name="add_a_timer">Timer hinzufügen</string>
+    <string name="share">Teilen</string>
+    <string name="delete_note">Notiz löschen</string>
+    <string name="share_this_note">Diese Notiz teilen</string>
+    <string name="save">Speichern</string>
 
-    <!-- Fragments -->
     <string name="item_stopwatch">Stoppuhr</string>
     <string name="item_calculator">Rechner</string>
-    <string name="item_notepad">Notizblock</string>
+    <string name="item_notepad">Notizbuch</string>
     <string name="item_rng">Zufallszahl</string>
     <string name="item_timer">Timer</string>
 
-    <!-- Views Strings -->
+    <string name="timer_set">Timer eingestellt.</string>
+    <string name="timer_canceled">Timer abgebrochen.</string>
+    <string name="note_saved">Notiz gespeichert.</string>
+    <string name="delete_note_desc">Sind Sie sicher, dass Sie diese Notiz löschen möchten?</string>
+
+    <string name="invalid_name">Ungültiger Name!</string>
+    <string name="invalid_name_desc">
+Der Titel ist ungültig oder wird bereits verwendet. Bitte wählen Sie einen anderen Titel.
+Hinweis: Folgende Zeichen sind nicht erlaubt:
+    </string>
+
+    <string name="stopwatch_running">Stoppuhr läuft.</string>
+    <string name="timer_running">Timer läuft.</string>
+
+    <string name="time">Zeit:</string>
+    <string name="time_left">Verbleibende Zeit:</string>
+    <string name="timer_name">Timername…</string>
+    <string name="time_is_up">Die Zeit ist abgelaufen!</string>
+    <string name="timer">Timer:</string>
+    <string name="ended">beendet.</string>
+    <string name="timers_running">Timer laufen.</string>
+
+    <string name="show_milliseconds_on_stopwatch">Millisekunden in der Stoppuhr anzeigen</string>
+
     <string name="title">Titel</string>
     <string name="content">Inhalt…</string>
     <string name="new_note_fab">Neue Notiz</string>
-    <string name="timer_name">Timer-Name…</string>
-    <string name="loading">Lädt…</string>
+    <string name="loading">Laden…</string>
     <string name="no_notes_found">Keine Notizen gefunden.</string>
-    <string name="write_your_notes_here">Schreibe deine Notizen hier…</string>
+    <string name="write_your_notes_here">Schreiben Sie hier Ihre Notizen…</string>
     <string name="unnamed">Unbenannt</string>
 
-    <!-- Toast Strings -->
-    <string name="timer_set">Timer gesetzt.</string>
-    <string name="timer_canceled">Timer abgebrochen.</string>
-    <string name="note_saved">Notiz gespeichert.</string>
-
-    <!-- Notification Strings -->
-    <string name="stopwatch_running">Stoppuhr läuft.</string>
-    <string name="timer_running">Timer läuft.</string>
-    <string name="time">Zeit:</string>
-    <string name="time_left">Verbleibende Zeit: </string>
-
-    <!-- Alert Dialog Strings -->
-    <string name="invalid_name">Ungültiger Name!</string>
-    <string name="invalid_name_desc">Name ist ungültig oder bereits vergeben. Bitte wähle einen anderen Namen.</string>
-    <string name="time_is_up">Zeit ist um!</string>
-    <string name="timer">"Timer: "</string>
-    <string name="ended">beendet.</string>
-    <string name="delete_note">Notiz löschen</string>
-    <string name="delete_note_desc">Möchtest du diese Notiz wirklich löschen?</string>
-    <string name="add_a_timer">einen Timer hinzufügen</string>
-    <string name="timers_running">Timer laufen</string>
-    <string name="share">Aktie</string>
-    <string name="share_this_note">Notiz teilen</string>
-    <string name="save">speichern</string>
-    <string name="show_milliseconds_on_stopwatch">Millisekunden auf der Stoppuhr anzeigen.</string>
-    <string name="settings_udpated">Einstellungen aktualisiert</string>
-    <string name="stop_all">Hör auf mit allem</string>
+    <string name="settings_updated">Einstellungen aktualisiert</string>
     <string name="start_stopwatch">Stoppuhr starten</string>
-    <string name="not_available">This is not available right now.</string>
+    <string name="not_available">Derzeit nicht verfügbar.</string>
+
     <string name="settings">Einstellungen</string>
-    <string name="toolbox_settings">Toolbox Einstellungen</string>
-    <string name="untitled_note">Unbenannte_Notiz</string>
-    <string name="choose_button_background">Wählen Sie den Schaltflächenhintergrund:</string>
-    <string name="are_you_sure">Bist du sicher?</string>
-    <string name="exit_for_sure">Möchten Sie wirklich beenden, ohne die Notiz zu speichern?</string>
+    <string name="toolbox_settings">Toolbox-Einstellungen</string>
+    <string name="untitled_note">Unbenannte Notiz</string>
+
+    <string name="button_background_color">Hintergrundfarbe der Schaltflächen:</string>
+    <string name="choose_button_background">Hintergrund auswählen</string>
+
+    <string name="are_you_sure">Sind Sie sicher?</string>
+    <string name="exit_for_sure">Ohne Speichern der Notiz beenden?</string>
+
     <string name="about_toolbox">Über Toolbox</string>
-    <string name="app_version">"App-Version: "</string>
+    <string name="app_version">App-Version:</string>
     <string name="developer_info">Entwickelt von Jason Tantaros</string>
     <string name="contact_info">Kontakt: iasonas.tan@gmail.com</string>
-    <string name="developer_name">" Jason Tantaros"</string>
-    <string name="button_background_color">Hintergrundfarbe der Schaltfläche:</string>
-    <string name="borders">Grenzen:</string>
+    <string name="developer_name">Jason Tantaros\nAlle Rechte vorbehalten.</string>
+
+    <string name="borders">Rahmen:</string>
     <string name="enable_borders">Rahmen aktivieren</string>
-    <string name="round_corners">Runde Ecken</string>
-    <string name="choose_color">Farbe wählen</string>
+    <string name="round_corners">Abgerundete Ecken</string>
+    <string name="choose_color">Farbe auswählen</string>
+
     <string name="limit">Limit:</string>
-    <string name="done" >Erledigt</string>
-    <string name="open">Offen</string>
-    <string name="rng_limit">Limit</string>
+    <string name="done">Fertig</string>
+    <string name="open">Öffnen</string>
+    <string name="rng_limit">RNG-Limit:</string>
+
     <string name="widgets">Widgets:</string>
+    <string name="status_about_running_timers">Status laufender Timer anzeigen</string>
+    <string name="could_not_save_note">Notiz konnte nicht gespeichert werden.</string>
 
 </resources>
