--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,68 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="start">Начать</string>
-    <string name="reset">Сбросить</string>
-    <string name="stop">Останавливаться</string>
+
+    <string name="battery_warning">
+Приложение работает даже без разрешений, но при высокой нагрузке на батарею или память система Android может остановить некоторые службы.
+
+Это означает, что таймеры или секундомер могут неожиданно остановиться.
+
+Вы можете разрешить работу в фоновом режиме: Информация о приложении → Батарея → Без ограничений.
+    </string>
+
+    <string name="permission_helps">Разрешения улучшают работу приложения</string>
+    <string name="never_ask_again">Больше не спрашивать</string>
+    <string name="lets_do_it">Давайте сделаем это</string>
+    <string name="remind_me_later">Напомнить позже</string>
+    <string name="greet_will_happen_again_on">Приветствие снова появится </string>
+
+    <string name="start">Старт</string>
+    <string name="reset">Сброс</string>
     <string name="pause">Пауза</string>
-    <string name="delete">Удалить заметку</string>
+    <string name="stop">Стоп</string>
+    <string name="delete">Удалить</string>
     <string name="back">Назад</string>
+    <string name="cancel">Отмена</string>
+    <string name="stop_all">Остановить все</string>
+    <string name="add_a_timer">Добавить таймер</string>
+    <string name="share">Поделиться</string>
+    <string name="delete_note">Удалить заметку</string>
+    <string name="share_this_note">Поделиться заметкой</string>
+    <string name="save">Сохранить</string>
+
     <string name="item_stopwatch">Секундомер</string>
     <string name="item_calculator">Калькулятор</string>
     <string name="item_notepad">Блокнот</string>
     <string name="item_rng">Случайное число</string>
     <string name="item_timer">Таймер</string>
-    <string name="title">Заголовок</string>
-    <string name="content">Содержимое…</string>
-    <string name="new_note_fab">Новая заметка</string>
-    <string name="timer_name">Имя таймера…</string>
-    <string name="loading">Загрузка…</string>
-    <string name="no_notes_found">Заметки не найдены.</string>
-    <string name="write_your_notes_here">Напишите свои заметки здесь…</string>
+
     <string name="timer_set">Таймер установлен.</string>
     <string name="timer_canceled">Таймер отменён.</string>
     <string name="note_saved">Заметка сохранена.</string>
-    <string name="stopwatch_running">Секундомер работает.</string>
-    <string name="timer_running">Таймер работает.</string>
-    <string name="time">Время: </string>
-    <string name="time_left">Осталось времени: </string>
-    <string name="unnamed">Без имени</string>
-    <string name="invalid_name">Неверное имя!</string>
-    <string name="invalid_name_desc">Имя недопустимо или уже используется. Пожалуйста, выберите другое имя.</string>
-    <string name="time_is_up">время истекло</string>
-    <string name="cancel">отмена</string>
-    <string name="timer">Таймер:</string>
-    <string name="ended">все кончено</string>
-    <string name="delete_note">удалить примечание</string>
     <string name="delete_note_desc">Вы уверены, что хотите удалить эту заметку?</string>
-    <string name="add_a_timer">добавить таймер</string>
-    <string name="timers_running">таймеры работают</string>
-    <string name="share">делиться</string>
-    <string name="share_this_note">поделиться заметкой</string>
-    <string name="save">сохранять</string>
-    <string name="show_milliseconds_on_stopwatch">Показывать миллисекунды на секундомере.</string>
-    <string name="settings_udpated">настройки обновлены</string>
-    <string name="stop_all">остановить все</string>
-    <string name="start_stopwatch">Включить секундомер</string>
-    <string name="not_available">сейчас недоступно</string>
-    <string name="settings">настройки</string>
-    <string name="toolbox_settings">Toolbox Настройки</string>
-    <string name="untitled_note">Заметка без названия</string>
-    <string name="choose_button_background">Выбрать фон кнопки</string>
+
+    <string name="invalid_name">Недопустимое имя!</string>
+    <string name="invalid_name_desc">
+Заголовок недопустим или уже используется. Пожалуйста, выберите другое название.
+Подсказка: запрещены следующие символы:
+    </string>
+
+    <string name="stopwatch_running">Секундомер запущен.</string>
+    <string name="timer_running">Таймер запущен.</string>
+
+    <string name="time">Время:</string>
+    <string name="time_left">Осталось времени:</string>
+    <string name="timer_name">Название таймера…</string>
+    <string name="time_is_up">Время вышло!</string>
+    <string name="timer">Таймер:</string>
+    <string name="ended">завершён.</string>
+    <string name="timers_running">таймер(ы) запущены.</string>
+
+    <string name="show_milliseconds_on_stopwatch">Показывать миллисекунды в секундомере</string>
+
+    <string name="title">Заголовок</string>
+    <string name="content">Содержимое…</string>
+    <string name="new_note_fab">Новая заметка</string>
+    <string name="loading">Загрузка…</string>
+    <string name="no_notes_found">Заметки не найдены.</string>
+    <string name="write_your_notes_here">Напишите ваши заметки здесь…</string>
+    <string name="unnamed">Без имени</string>
+
+    <string name="settings_updated">Настройки обновлены</string>
+    <string name="start_stopwatch">Запустить секундомер</string>
+    <string name="not_available">Сейчас недоступно.</string>
+
+    <string name="settings">Настройки</string>
+    <string name="toolbox_settings">Настройки Toolbox</string>
+    <string name="untitled_note">Без названия</string>
+
+    <string name="button_background_color">Цвет фона кнопок:</string>
+    <string name="choose_button_background">Выбрать фон кнопок</string>
+
     <string name="are_you_sure">Вы уверены?</string>
-    <string name="exit_for_sure">Вы уверены, что хотите выйти, не сохраняя заметку?</string>
-    <string name="about_toolbox">О Toolbox</string>
+    <string name="exit_for_sure">Выйти без сохранения заметки?</string>
+
+    <string name="about_toolbox">О приложении</string>
     <string name="app_version">Версия приложения:</string>
-    <string name="developer_info">Разработано Джейсоном Тантаросом</string>
+    <string name="developer_info">Разработчик: Jason Tantaros</string>
     <string name="contact_info">Контакт: iasonas.tan@gmail.com</string>
-    <string name="developer_name">" Jason Tantaros"</string>
-    <string name="button_background_color">Цвет фона кнопки:</string>
-    <string name="borders">границы</string>
-    <string name="enable_borders">включить границы</string>
-    <string name="round_corners">круглые углы</string>
-    <string name="choose_color">выберите цвет</string>
-    <string name="limit">Limit:</string>
-    <string name="done" >сделанный</string>
-    <string name="open">открыть</string>
-    <string name="rng_limit">предел</string>
-    <string name="widgets">виджеты</string>
+    <string name="developer_name">Jason Tantaros\nВсе права защищены.</string>
+
+    <string name="borders">Границы:</string>
+    <string name="enable_borders">Включить границы</string>
+    <string name="round_corners">Скруглённые углы</string>
+    <string name="choose_color">Выбрать цвет</string>
+
+    <string name="limit">Лимит:</string>
+    <string name="done">Готово</string>
+    <string name="open">Открыть</string>
+    <string name="rng_limit">Лимит RNG:</string>
+
+    <string name="widgets">Виджеты:</string>
+    <string name="status_about_running_timers">Показывать статус запущенных таймеров</string>
+    <string name="could_not_save_note">Не удалось сохранить заметку.</string>
+
 </resources>
